# RxGuard

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: README.md
configs/: evidence_relations_core.txt
data/: README.md  input_schema.md
src/rxguard/: __init__.py
src/rxguard/data/: __init__.py  dataset.py  types.py
src/rxguard/eval/: __init__.py  metrics.py
src/rxguard/examples/: __init__.py  synthetic_demo.py
src/rxguard/model/: __init__.py  decision_kg.py  guardrails.py  rxguard.py  scoring.py
src/rxguard/preprocess/: __init__.py  aligned_ehr_to_rxguard.py  build_vocab_and_stats.py  drugbank_ddi.py  evidence_kg.py
src/rxguard/runtime/: __init__.py  artifacts.py  predict.py  train.py
