[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rxguard"
version = "0.1.0"
description = "Paper-aligned implementation skeleton for RxGuard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "tomli>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
